# chatdelta-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  README.md  WISHLIST.md
.github/workflows/: ci.yml
examples/: chat_session.rs  custom_endpoints.rs  metadata_and_tokens.rs  orchestration_demo.rs  retry_strategies.rs  test_providers.rs
src/: error.rs  http.rs  lib.rs  metrics.rs  middleware.rs  observability.rs  orchestration.rs  prompt_optimizer.rs  sse.rs  utils.rs
src/clients/: claude.rs  gemini.rs  mod.rs  openai.rs
tests/: streaming_tests.rs
