[package]
name = "chatdelta"
version = "0.6.0"
edition = "2021"
authors = ["ChatDelta Contributors"]
description = "A unified Rust library for connecting to multiple AI APIs with streaming, conversations, and parallel execution"
license = "MIT"
repository = "https://github.com/ChatDelta/chatdelta-rs"
homepage = "https://github.com/ChatDelta/chatdelta-rs"
documentation = "https://docs.rs/chatdelta"
readme = "README.md"
keywords = ["ai", "openai", "claude", "api", "streaming"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "chatdelta"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
tokio-stream = "0.1"
pin-project-lite = "0.2"
rand = "0.8"
once_cell = "1.19"
moka = { version = "0.12", features = ["future"] }